--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<h1>Blog sobre Git y GitHub</h1>
-	<p>*Todo sobre git</p>
+	<div id="container">
+		<div id="post">
+			<h1>Blog sobre Git y GitHub la purita verdad</h1>
+			<p>*Todo sobre git, todo lo nuevo en este parrafo</p>
+		</div>
+	</div>
+		
 </body>
 </html>
