estructura incial de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<div id="container">
+		<div id="cabecera">
+			cabecera
+		</div>
 		<div id="post">
 			<h1>Blog sobre Git y GitHub la purita verdad</h1>
 			<p>*Todo sobre git, todo lo nuevo en este parrafo</p>
