final de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -9,11 +9,13 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-			cabecera
+			HyperBlog
+			<span id="tagline">tu blog de cabecera</span>
 		</div>
 		<div id="post">
 			<h1>Blog sobre Git y GitHub la purita verdad</h1>
-			<p>*Todo sobre git, todo lo nuevo en este parrafo</p>
+			<p>*Todo sobre git, todo lo nuevo en este parrafo.</p>
+			<p>*Todas las ventajas de saber Git.</p>
 		</div>
 	</div>
 		
