--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 		<div id="post">
 			<h1>Blog sobre Git y GitHub la purita verdad</h1>
 			<p>*Todo sobre git, todo lo nuevo en este parrafo</p>
+			<p>*Organiza tus repositorios.</p>
 		</div>
 	</div>
 		
