--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@
 			<h1>Blog sobre Git y GitHub la purita verdad</h1>
 			<p>*Todo sobre git, todo lo nuevo en este parrafo.</p>
 			<p>*Todas las ventajas de saber Git.</p>
+			<p>*Comandos mas usados en Git.</p>
 		</div>
 	</div>
 		
