--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
 			<p>*Organiza tus repositorios.</p>
 			<p>*Todas las ventajas de saber Git.</p>
 			<p>*Comandos mas usados en Git.</p>
+			<p>GitHub</p>
 		</div>
 	</div>
 		
