--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
@@ -18,6 +18,7 @@
 			<p>*Organiza tus repositorios.</p>
 			<p>*Todas las ventajas de saber Git.</p>
 			<p>*Comandos mas usados en Git.</p>
+			<p>*Disponible en Platzi.</p>
 			<p>GitHub</p>
 		</div>
 	</div>
