--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
 			HyperBlog
 			<span id="tagline">tu blog de cabecera</span>
 		</div>
+		<img src="img/fondo5.jpg" width="100%">
 		<div id="post">
 			<h1>Blog sobre Git y GitHub la purita verdad</h1>
 			<p>*Todo sobre git, todo lo nuevo en este parrafo.</p>
