--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 			<p>GitHub</p>
 		</div>
 	</div>
-		
+# Header 1
+## Header 2
+### Header 3
+
+- Bulleted
+- List
+
+1. Numbered
+2. List
 </body>
 </html>
