--- a/index.html
+++ b/index.html
@@ -19,18 +19,10 @@
 			<p>*Organiza tus repositorios.</p>
 			<p>*Todas las ventajas de saber Git.</p>
 			<p>*Comandos mas usados en Git.</p>
-			<p>*Disponible en Platzi.</p>
+			<p>*Disponible en Platzi.</p>	
+			<p>Obten tu propio Hosting.</p>
 			<p>GitHub</p>
 		</div>
 	</div>
-# Header 1
-## Header 2
-### Header 3
-
-- Bulleted
-- List
-
-1. Numbered
-2. List
 </body>
 </html>
